# fledge-north-s2opcua

./: .gitignore  CMakeLists.txt  Description  FindFledge.cmake  LICENSE  Makefile  README.md  TODO  VERSION  fledge.version  mkaddrspace  mkjson  mkversion  opcua_server.cpp  plugin.cpp  requirements.sh
.github/workflows/: ci.yml  publish.yml
include/: default_config.json  opcua_server.h  opcua_server_addrspace.h  opcua_server_config.h  opcua_server_tools.h  s2opc_base_nodeset_origin.xml
patches/: S2OPC.patch  check-0.15.2.patch
src/: opc_maps.inc  opcua_server.cpp  opcua_server_addrspace.cpp  opcua_server_config.cpp  opcua_server_tools.cpp  plugin.cpp
tests/: CMakeLists.txt  main.cpp  main_test_configs.h  test_addrspace.cpp  test_config.cpp  test_info.cpp  test_server.cpp
